<resources>
    <string name="app_name">Seat Booking</string>
    <string name="SeatsBooking">SeatsBooking</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="one_one">11</string>
    <string name="one_two">12</string>
    <string name="one_three">13</string>
    <string name="one_four">14</string>
    <string name="one_five">15</string>
    <string name="one_six">16</string>
    <string name="one_seven">17</string>
    <string name="one_eight">18</string>
    <string name="one_nine">19</string>
    <string name="two_zero">20</string>
    <string name="two_one">21</string>
    <string name="two_two">22</string>
    <string name="two_three">23</string>
    <string name="two_four">24</string>
    <string name="cancel">cancel</string>
    <string name="cont">continue</string>
    <string name="two_tw">22</string>
    <string name="twenty">20</string>
    <string name="two_">2</string>
    <string name="three_">3</string>
    <string name="confSeats">Confirm seats</string>
    <string name="updatebtn">Update</string>
    <string name="deleteBtn">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="seatBook">Seat booking</string>
    <string name="aaaa">nilu</string>
    <string name="usana">ushu</string>
    <string name="nilu">nila</string>
</resources>
